--- a/6/sass/style.scss
+++ b/6/sass/style.scss
@@ -744,6 +744,7 @@ main {
       @include font-style(#fff, 24px, 400);
 
       @media (max-width: 700px) {
+        max-width: 95%;
         font-size: 18px;
       }
     }
@@ -773,7 +774,6 @@ footer {
   .container {
     padding-bottom: 16px;
     display: flex;
-
     justify-content: space-between;
 
     @media (max-width: 1050px) {
