--- a/6/css/style.css
+++ b/6/css/style.css
@@ -750,6 +750,7 @@ main .feedback__text {
 }
 @media (max-width: 700px) {
   main .feedback__text {
+    max-width: 95%;
     font-size: 18px;
   }
 }
